tests/gen-derivation/derivation/norec-w_ext-dep_cons_param-005-neg/expected
Error: While processing right hand side of derivedGen. Error during reflection: Target type's argument must be a variable name

DerivedGen:12:72--12:78
 08 | 
 09 | %language ElabReflection
 10 | 
 11 | export
 12 | derivedGen : Fuel -> (Fuel -> Gen String) => (Fuel -> Gen Nat) => Gen (String, Nat)
                                                                             ^^^^^^

Error: Undefined name main. 
Did you mean: min?
